--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,5 @@
   "buildCommand": "pnpm build",
   "devCommand": "pnpm dev",
   "installCommand": "pnpm install",
-  "framework": "nextjs",
-  "outputDirectory": "out"
+  "framework": "nextjs"
 }
