--- a/package.json
+++ b/package.json
@@ -9,10 +9,7 @@
     "lint": "next lint",
     "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:coverage": "jest --coverage",
-    "analyze": "ANALYZE=true pnpm build",
+
     "build:production": "NODE_ENV=production next build",
     "preview": "pnpm build && pnpm start"
   },
@@ -28,9 +25,6 @@
     "react-dom": "^19.0.0",
     "tailwind-merge": "^3.3.1",
     "zod": "^3.23.8",
-    "@hookform/resolvers": "^3.3.4",
-    "react-hook-form": "^7.53.2",
-    "date-fns": "^4.1.0",
     "axios": "^1.7.2"
   },
   "devDependencies": {
@@ -44,11 +38,6 @@
     "eslint-config-next": "15.2.4",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
-    "typescript": "^5",
-    "@next/bundle-analyzer": "^15.2.4",
-    "jest": "^29.7.0",
-    "@testing-library/react": "^16.0.1",
-    "@testing-library/jest-dom": "^6.6.3",
-    "jest-environment-jsdom": "^29.7.0"
+    "typescript": "^5"
   }
 }
